# rust-projects

./: .gitignore
algorithm/src/: lib.rs  main.rs
learn-rust/data-types/: Cargo.toml
learn-rust/enum_match/: Cargo.toml
learn-rust/error_handle/: Cargo.toml  hello.txt
learn-rust/generic_trait_lifetime/: Cargo.toml
learn-rust/guess_game/: Cargo.toml
learn-rust/hello_cargo/: Cargo.toml
learn-rust/my_project/: Cargo.toml
learn-rust/owner_ship/: Cargo.toml
learn-rust/restaurant/: Cargo.toml
mild-ui/: .gitignore  Cargo.toml  package-lock.json  rustfmt.toml
mild-ui/crates/mild-docs/: Cargo.toml  Trunk.toml  index.html
mild-ui/crates/mild-docs/assets/: button-doc.scss  docs.scss  spacing.scss
mild-ui/crates/mild-docs/src/: main.rs  router.rs
mild-ui/crates/mild-docs/src/pages/button/: mod.rs
mild-ui/crates/mild-docs/src/utils/: mod.rs  string.rs  web.rs
practice/: Cargo.toml
practice/src/: lib.rs  (+1 more)
yew-app/: Cargo.toml  index.html
yew-app/src/: lib.rs  main.css  router.rs
yew-app/src/components/: mod.rs  structs.rs
yew-app/src/components/button/: mod.rs  style.css
yew-app/src/components/text_input/: mod.rs
yew-app/src/components/title/: mod.rs  style.css
yew-app/src/module/components/: mod.rs
yew-app/src/module/components/button/: mod.rs  style.css
yew-app/src/module/components/text_input/: mod.rs  style.css
yew-app/src/module/components/title/: mod.rs
yew-app/src/module/pages/: login.rs  style.css
yew-app/src/module/utilities/: style.rs
yew-app/src/pages/: hello.rs  home.rs  login.rs  mod.rs
yew-app/src/utils/: mod.rs
(+214 files in other folders)
