[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yewdux = "0.8.2"
yewdux-functional = "0.1.0"
stylist = {version = "0.10.1", features = ["yew"]}
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
]

[dev-dependencies]
gloo-console = "0.2.3"