[package]
name = "mild-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mild-core = {path = "../mild-core"}
gloo-console = "0.2.3"
yew-router = "0.17.0"
yew = {version = "0.20.0",  features = ["csr"]}

[dependencies.web-sys]
version = "^0.3.60"